@@ -370,7 +370,8 @@ static void print_usage(void)
 {
 	printf("mosquitto version %s\n\n", VERSION);
 	printf("mosquitto is an MQTT v5.0/v3.1.1/v3.1 broker.\n\n");
-	printf("Usage: mosquitto [-c config_file] [-d] [-h] [-p port]\n\n");
+	printf("Usage: mosquitto [-c config_file] [-d] [-h] [-p port] [-v]\n");
+	printf("                 [--tls-keylog file]\n\n");
 	printf(" -c : specify the broker config file.\n");
 	printf(" -d : put the broker into the background after starting.\n");
 	printf(" -h : display this help.\n");
@@ -378,6 +379,9 @@ static void print_usage(void)
 	printf("      Not recommended in conjunction with the -c option.\n");
 	printf(" -v : verbose mode - enable all logging types. This overrides\n");
 	printf("      any logging options given in the config file.\n");
+	printf(" --tls-keylog : Log TLS connection information to a file, to allow\n");
+	printf("      debugging with e.g. wireshark. Do not use on a production\n");
+	printf("      server.\n");
 	printf("\nSee https://mosquitto.org/ for more information.\n\n");
 }
 
@@ -420,6 +424,18 @@ int config__parse_args(struct mosquitto__config *config, int argc, char *argv[])
 				}
 			}else{
 				log__printf(NULL, MOSQ_LOG_ERR, "Error: -p argument given, but no port specified.");
+				return MOSQ_ERR_INVAL;
+			}
+			i++;
+		}else if(!strcmp(argv[i], "--tls-keylog")){
+			if(i<argc-1){
+				db.tls_keylog = mosquitto_strdup(argv[i+1]);
+				if(db.tls_keylog == NULL){
+					log__printf(NULL, MOSQ_LOG_ERR, "Error: Out of memory.");
+					return MOSQ_ERR_NOMEM;
+				}
+			}else{
+				log__printf(NULL, MOSQ_LOG_ERR, "Error: --tls-keylog argument given, but no file specified.");
 				return MOSQ_ERR_INVAL;
 			}
 			i++;
