@@ -15,7 +15,9 @@ Broker:
   supported. Closes #2122.
 - Add kqueue support.
 - Enforce receive maximum on MQTT v5.
-- Report on what compile time options are available. Closes #2193.
+- Report on what compile time options are enabled. Closes #2193.
+- Add `--tls-keylog` option which can be used to generate a file that can be
+  used by wireshark to decrypt TLS traffic for debugging purposes. Closes #1818.
 
 Client library:
 - Add MOSQ_OPT_DISABLE_SOCKETPAIR to allow the disabling of the socketpair
